@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.762.2.47 2009/02/09 14:58:10 tr Exp $
+# $Id: CHANGES,v 1.762.2.48 2009/02/11 19:46:19 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.5 (2009/??/??)
+ - (2009/02/11) Fixed ticket# 2009020942001554 - generic agent is logging many
+    debug infos into log file.
  - (2009/02/09) Fixed bug# 3656 - The package manager testscript doesn't work
     on developer installations.
  - (2009/02/09) Fixed bug# 3458 - Length of E-mail adress form in
